build(pom): Use --release when building java client with java11+